--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Opeoluwa Shodipe</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="#" class="twitter"><i class="https://twitter.com/eadencre8ives"></i></a>
+          <a href="#" class="facebook"><i class="https://facebook.com/Eadencreative"></i></a>
+          <a href="#" class="instagram"><i class="https://instagram.com/eadencreatives"></i></a>
           <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="#" class="linkedin"><i class="https://linkedin.com/in/opeoluwa-shodipe-6b44aa208"></i></a>
         </div>
       </div>
 
@@ -74,7 +74,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Opeoluwa Shodipe</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Content Creator"></span></p>
+      <p>I'm a<span class="typed" data-typed-items="Designer, Developer, Freelancer, Content Creator"></span></p>
     </div>
   </section><!-- End Hero -->
 
