--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Opeoluwa Shodipe</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="https://twitter.com/eadencre8ives"></i></a>
-          <a href="#" class="facebook"><i class="https://facebook.com/Eadencreative"></i></a>
-          <a href="#" class="instagram"><i class="https://instagram.com/eadencreatives"></i></a>
+          <a href="https://twitter.com/eadencre8ives" class="twitter"><i class="bx bx1-twitter"></i></a>
+          <a href="https://facebook.com/Eadencreative" class="facebook"><i class="bx bx1-facebook"></i></a>
+          <a href="https://instagram.com/eadencreatives" class="instagram"><i class="bx bx1-instagram"></i></a>
           <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="https://linkedin.com/in/opeoluwa-shodipe-6b44aa208"></i></a>
+          <a href="https://linkedin.com/in/opeoluwa-shodipe-6b44aa208" class="linkedin"><i class="bx bx1-linkedin"></i></a>
         </div>
       </div>
 
